collection added to demo data

--- a/demo_data/demo_data_level_1.yaml
+++ b/demo_data/demo_data_level_1.yaml
@@ -7,4 +7,17 @@ person:
         surname: Kim
         unix_account: ensign4ever
         id_organization: {idByList(list(shorthand = 'we'), 'organization')}
+
+spot:
+    new1:
+        name: garden 1
+        description: under the roof of the bike stand
+
+collection:
+    new1:
+        name: {getNextIdentifier}
+        id_matrix: {idByList(list(name = 'outside air'), 'matrix')}
+        collection_class: 'time series'
+        id_spot: {idByList(list(name = 'garde 1'), 'spot')}
+
 ---
